# librechat-desktop

./: .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
specs/001-build-an-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-application/contracts/: auth-api.yaml  conversations-api.yaml  files-api.yaml  messages-api.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/database/: encryption.rs  migrations.rs  mod.rs
src-tauri/src/models/: conversation.rs  dropped_file.rs  encrypted_cache.rs  enums.rs  message.rs  message_queue.rs  mod.rs  quick_capture.rs  server_configuration.rs  user_preferences.rs
src-tauri/src/services/: api_client.rs  auth_service.rs  cache_service.rs  conversations_service.rs  files_service.rs  messages_service.rs  mod.rs  preferences_service.rs  storage_service.rs  sync_service.rs
src-tauri/tests/: contract.rs  integration.rs
src-tauri/tests/contract/: mod.rs  test_auth_api.rs  test_conversations_api.rs  test_files_api.rs  test_messages_api.rs
src-tauri/tests/integration/: mod.rs  test_auth_flow.rs  test_connection.rs  test_file_handling.rs  test_global_hotkeys.rs  test_multi_window.rs  test_offline_cache.rs  test_quick_capture.rs  test_system_tray.rs
