[package]
name = "librechat-desktop"
version = "0.1.0"
edition = "2021"
description = "LibreChat Desktop application"
authors = ["LibreChat"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
keyring = "2"
rand = { version = "0.8", features = ["std"] }
mime = "0.3"
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2.8.0", features = ["wry"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-store = "2.0.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
